--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g npm
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm install --global yarn
+    - run: yarn run build --if-present
+    - run: yarn test
