--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g npm
+    - run: rm -rf node_modules
     - run: npm install --global yarn
     - run: yarn run build --if-present
     - run: yarn test
