--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: rm -rf node_modules
     - run: npm install --global yarn
-    - run: yarn run build --if-present
+    - run: yarn run build 
     - run: yarn test
