--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: rm -rf node_modules
+    - run: npm install
     - run: npm install --global yarn
     - run: yarn test
     - run: yarn run build 
