--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm install
     - run: npm install --global yarn
    # - run: yarn test
-    - run: yarn run build 
+    - run: CI= yarn build
    
